# QBudget

./: .gitignore  CMakeLists.txt  README.md
Tests/: test_BudgetApp.cpp  test_dateOperations.cpp
src/: DateOperations.cpp  DateOperations.h  Expense.cpp  Expense.h  ExpensesFile.cpp  ExpensesFile.h  ExpensesManager.cpp  ExpensesManager.h  FileXml.h  Income.cpp  Income.h  IncomesFile.cpp  IncomesFile.h  IncomesManager.cpp  IncomesManager.h  Money.cpp  Money.h  MoneyManager.cpp  MoneyManager.h  MyBudget.cpp  MyBudget.h  UnasignedMethods .cpp  UnasignedMethods.h  User.cpp  User.h  UserFile.cpp  UserFile.h  UserManager.cpp  UserManager.h  dbmanager.cpp  dbmanager.h  main.cpp
